# internal/adapters/server/grpc_server/users/login.go
@@ -10,19 +10,23 @@ import (
 )
 
 func (s *UserService) Login(ctx context.Context, req *user.LoginRequest) (*user.LoginResponse, error) {
-	token, info, err := s.loginUseCase.Login(ctx, req.Username, req.Password)
+	token, expiresAt, info, err := s.loginUseCase.Login(ctx, req.Username, req.Password)
 	if err != nil {
 		return nil, status.Errorf(codes.Unauthenticated, "login failed: %v", err)
 	}
-	b, _ := json.Marshal(map[string]interface{}{
-		"name":              info.Name,
-		"email":             info.Email,
-		"cmnd":              info.DocumentID,
-		"birthday":          info.Birthday.Unix(),
-		"gender":            info.Gender,
-		"permanent_address": info.PermanentAddress,
-		"phone_number":      info.PhoneNumber,
-	})
+
+	payload := map[string]interface{}{
+		"name":                  info.Name,
+		"email":                 info.Email,
+		"cmnd":                  info.DocumentID,
+		"birthday":              info.Birthday.Unix(),
+		"gender":                info.Gender,
+		"permanent_address":     info.PermanentAddress,
+		"phone_number":          info.PhoneNumber,
+		"token_expires_at_unix": expiresAt.Unix(),
+	}
+	b, _ := json.Marshal(payload)
+
 	return &user.LoginResponse{
 		Code:    uint32(codes.OK),
 		Message: string(b),
